init webpack ran migrations hello world

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "give_it_up",
   "private": true,
   "dependencies": {
+    "@rails/webpacker": "3.5",
     "babel-preset-react": "~6.24.1",
     "prop-types": "~15.6.0",
     "react": "~15.4.2",
@@ -9,8 +10,6 @@
     "redbox-react": "1.6.0"
   },
   "devDependencies": {
-    "webpack-cli": "^2.0.10",
-    "webpack-dev-server": "^2.11.1",
     "babel-plugin-transform-runtime": "^6.23.0",
     "enzyme": "~2.9.1",
     "fetch-mock": "5",
@@ -25,7 +24,9 @@
     "karma-spec-reporter": "0.0.26",
     "karma-webpack": "2.0.1",
     "phantomjs-prebuilt": "~2.1.14",
-    "react-addons-test-utils": "~15.6.2"
+    "react-addons-test-utils": "~15.6.2",
+    "webpack-cli": "^2.0.10",
+    "webpack-dev-server": "2.11.2"
   },
   "scripts": {
     "start": "./bin/webpack-dev-server",
