--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "private": true,
   "dependencies": {
     "@rails/webpacker": "3.5",
-    "babel-preset-react": "~6.24.1",
-    "prop-types": "~15.6.0",
-    "react": "~15.4.2",
-    "react-dom": "~15.4.2",
+    "babel-preset-react": "^6.24.1",
+    "prop-types": "^15.7.2",
+    "react": "^16.9.0",
+    "react-dom": "^16.9.0",
     "redbox-react": "1.6.0"
   },
   "devDependencies": {
